ts compiler error fixing

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -236,7 +236,9 @@
       "pageDeviceLabel": "Page device"
     },
 
-    "deviceSettingsEditor": {},
+    "deviceSettingsEditor": {
+      "indexPageId": "Device front page"
+    },
 
     "addDeviceEditor": {
       "title": "Add new device",
