--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -236,7 +236,9 @@
       "pageDeviceLabel": "Sivun laite"
     },
 
-    "deviceSettingsEditor": {},
+    "deviceSettingsEditor": {
+      "indexPageId": "Laitteen etusivu"
+    },
 
     "addDeviceEditor": {
       "title": "Lisää uusi laite",
