Hid unused features and impl. layout copy

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -849,7 +849,9 @@
     "clear": "Clear",
     "notYetImplemented": "Not yet implemented",
     "actions": "Actions",
-    "edit": "Modify"
+    "edit": "Modify",
+    "doCopy": "Copy",
+    "copy": "Copy"
   },
 
   "spaces": {
