--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -857,7 +857,9 @@
     "clear": "Tyhjennä",
     "notYetImplemented": "Ei vielä toteutettu",
     "actions": "Toiminnot",
-    "edit": "Muokkaa"
+    "edit": "Muokkaa",
+    "doCopy": "Kopioi",
+    "copy": "Kopio"
   },
 
   "spaces": {
