--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -55,6 +55,12 @@
     "rename": {
       "title": "Rename exhibition"
     },
+    "setActiveExhibitionDalog": {
+      "title": "Set active exhibition",
+      "currentlyActiveExhibition": "Currently active exhibition is: {0}",
+      "newActiveExhibition": "Would you like to set exhitibion {0} as active?",
+      "setActiveButton": "Set active"
+    },
     "createExhibitionDialog": {
       "title": "Create new exhibition",
       "helpText": "You can create new exhibition by adding a name and pressing create button",
@@ -75,7 +81,8 @@
       "delete": "Delete",
       "rename": "Rename",
       "edit": "Edit",
-      "copyExhibition": "Copy exhibition"
+      "copyExhibition": "Copy exhibition",
+      "setActive": "Set active"
     }
   },
 
