Disabled percentage proportions on some components

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -505,7 +505,7 @@
       "elementName": "Element name",
       "proportions": "Proportions",
       "backgroundImage": "Background image",
-      "videoProportionsTooltip": "Video element only supports pixel dimensions",
+      "noPercentageDimensionsTooltip": "{0} element only supports pixel dimensions",
       "width": "Width",
       "height": "Height",
       "elevation": "Elevation",
