--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -1189,7 +1189,7 @@
       },
       "version": "Ohjelmistoversio",
       "usageHours": "Käyttötunnit",
-      "warrantyExpiry": "Takuun päättyy",
+      "warrantyExpiry": "Takuu päättyy",
       "lastConnected": "Yhdistetty",
       "createdAt": "Luotu",
       "modifiedAt": "Muokattu",
