--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -702,6 +702,7 @@
     "addDialogTitle": "Uusi sisältökokonaisuus",
     "addDialogDescription": "Anna nimi uudelle sisältökokonaisuudelle",
     "name": "Nimi",
+    "deviceGroup": "Laiteryhmä",
     "language": "Kieli",
     "rooms": "Näyttelykohteet",
     "room": "Näyttelykohde",
