--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -712,10 +712,11 @@
     "language": "Language",
     "rooms": "Rooms",
     "room": "Room",
-    "delete": {
-      "deleteTitle": "Delete set of materials?",
-      "deleteText": "Are you sure you want to delete this set of content?",
-      "contentTitle": "Content cannot be deleted. Content in use."
+    "deleteDialog": {
+      "title": "Delete set of materials?",
+      "text": "Are you sure you want to delete this set of content?",
+      "pagesWarning": "This set of content has pages. Deleting this set of content will also delete following pages:",
+      "confirmPagesRemoval": "Confirm removal of pages"
     },
     "contentMaterials": "Content materials",
     "nameAlreadyTaken": "Name is already in use in existing set of content",
