--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -1220,7 +1220,8 @@
       },
       "serialNumber": "Serial number",
       "lastSeen": "Last seen",
-      "model": "Device model"
+      "model": "Device model",
+      "deviceType": "Device type"
     },
     "deleteDialog": {
       "title": "Delete device",
